Modified stylesheet link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\style.css">
+    <link rel="stylesheet" href=".\style.css">
     <title>Horiseon</title>
 </head>
 
