--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
             </ul>
         </div>
     </div>
-    <div class="hero"> <img class="markimg" src="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\images\digital-marketing-meeting.jpg" alt="Image of digital maketing team during a meeting."> </div>
+    <div class="hero"> <img class="markimg" src=".\images\digital-marketing-meeting.jpg" alt="Image of digital maketing team during a meeting."> </div>
     <div class="content">
         <div id="search-engine-optimization" class="main_service">
-            <img src="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\images\search-engine-optimization.jpg" class="float-left" alt="Image of a notebook with Search Engine Optimization concepts." />
+            <img src=".\images\search-engine-optimization.jpg" class="float-left" alt="Image of a notebook with Search Engine Optimization concepts." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="main_service">
-            <img src="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\images\online-reputation-management.jpg" class="float-right" alt="Image of latop showing an online reputation chart for a webpage."/>
+            <img src=".\images\online-reputation-management.jpg" class="float-right" alt="Image of latop showing an online reputation chart for a webpage."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="main_service">
-            <img src="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\images\social-media-marketing.jpg" class="float-left" alt="Image of a digital marketing team during a meeting, with icons of social media concepts on the table."/>
+            <img src=".\images\social-media-marketing.jpg" class="float-left" alt="Image of a digital marketing team during a meeting, with icons of social media concepts on the table."/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <div class="benefits">
         <div class="benefit">
             <h3>Lead Generation</h3>
-            <img style="width:250px; display: block; margin: 10px auto;" src="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\images\lead-generation.png" alt="Black icon inidcating lead generation" />
+            <img style="width:250px; display: block; margin: 10px auto;" src=".\images\lead-generation.png" alt="Black icon inidcating lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img style="width:250px; display: block; margin: 10px auto;" src="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\images\brand-awareness.png" alt="Black icon showing brand awareness" />
+            <img style="width:250px; display: block; margin: 10px auto;" src=".\images\brand-awareness.png" alt="Black icon showing brand awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit">
             <h3>Cost Management</h3>
-            <img style="width:250px; display: block; margin: 10px auto;" src="C:\Users\Daniel\Documents\Bootcamp_docs\Unit_1_homeworks\Code_refractor_homework\images\cost-management.png" alt="Black icon showing cost management"/>
+            <img style="width:250px; display: block; margin: 10px auto;" src=".\images\cost-management.png" alt="Black icon showing cost management"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
